--- a/templatelibrary/src/main/res/layout/lish_item_little_goods_layout.xml
+++ b/templatelibrary/src/main/res/layout/lish_item_little_goods_layout.xml
@@ -1,45 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eeeeee"
-    android:padding="4dp"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:padding="4dp">
 
-    <ImageView
-        android:id="@+id/goods_icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"/>
-
-    <TextView
-        android:id="@+id/goods_dec"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="goods_dec" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:background="#ffffffff"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/goods_sub_dec"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="goods_sub_dec" />
+        <ImageView
+            android:id="@+id/goods_icon"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
 
-    <TextView
-        android:id="@+id/goods_sub_dec2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="goods_sub_dec2" />
+        <TextView
+            android:id="@+id/goods_dec"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="goods_dec" />
 
-    <TextView
-        android:id="@+id/goods_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="goods_btn" />
+        <TextView
+            android:id="@+id/goods_sub_dec"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="goods_sub_dec" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/goods_sub_dec2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="goods_sub_dec2" />
+
+        <TextView
+            android:id="@+id/goods_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="goods_btn" />
+
+    </LinearLayout>
+
+
+</FrameLayout>
