--- a/templatelibrary/src/main/res/layout/lish_item_goods_layout.xml
+++ b/templatelibrary/src/main/res/layout/lish_item_goods_layout.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#eeeeee"
     android:layout_gravity="center"
+    android:background="#ffffffff"
     android:gravity="center"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/goods_icon"
         android:layout_width="172dp"
-        android:layout_height="172dp"/>
+        android:layout_height="172dp" />
 
     <TextView
         android:id="@+id/goods_dec"
